--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^4.1.0
+  flutter_bloc: ^8.1.4
+  equatable: ^2.0.5
+  bloc: ^8.1.4
+  cloud_firestore: 
+
 
 dev_dependencies:
   flutter_test:
