--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   cloud_firestore: 
   firebase_auth: 
   google_sign_in: ^7.2.0 
+  firebase_remote_config: ^6.0.2
+  firebase_analytics: ^12.0.2
+  device_info_plus: ^12.1.0
+  package_info_plus: ^9.0.0
+  firebase_messaging: 
+  flutter_local_notifications: 
 
 
 
